# fifo-c-rust

./: reader.cpp  writer.cpp
rust_pipe/: Cargo.toml
rust_pipe/devel/: .catkin  .rosinstall  setup.sh
rust_pipe/src/: main.rs  receiver.rs  sender.rs
